[gd_scene load_steps=12 format=3 uid="uid://boilr8ypqjkcm"]

[ext_resource type="Script" uid="uid://cduvvcqhbjk7f" path="res://script/Base/GameManager/GameManager.gd" id="1_r5iky"]
[ext_resource type="Script" uid="uid://c7n72yx4b1c6w" path="res://script/Base/GameManager/LevelManager.gd" id="2_oryhb"]
[ext_resource type="Script" uid="uid://dw0v4wxqut7ku" path="res://script/Base/GameManager/UIManager.gd" id="4_e0xc1"]
[ext_resource type="Script" uid="uid://dddio4ahove4p" path="res://script/Base/GameManager/BulletManager.gd" id="5_70iqa"]
[ext_resource type="Script" uid="uid://co3fuf7wfah7a" path="res://script/Base/Pool/BulletPool.gd" id="6_ktoa3"]
[ext_resource type="PackedScene" uid="uid://kks7ir0kgg1a" path="res://scenes/Character/player.tscn" id="7_s7fwu"]
[ext_resource type="Script" uid="uid://n4y6agwlabiw" path="res://script/Base/GameManager/PlayerManager.gd" id="9_mkkgn"]
[ext_resource type="Script" uid="uid://tdmcu3venow7" path="res://script/Base/GameManager/EnemyManager.gd" id="10_jtbw3"]
[ext_resource type="Script" uid="uid://dtpvta2g033k" path="res://script/Base/GameManager/CameraManager.gd" id="10_pw3kq"]
[ext_resource type="Script" uid="uid://dm7jkuq83bi5d" path="res://script/Base/GameManager/CursorManager.gd" id="11_mfgc0"]
[ext_resource type="Script" uid="uid://c7g0hx0mww4p4" path="res://script/Base/GameManager/VFXManager.gd" id="15_rxwbf"]

[node name="GameManager" type="Node"]
script = ExtResource("1_r5iky")

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("2_oryhb")

[node name="UIManager" type="Node" parent="."]
script = ExtResource("4_e0xc1")

[node name="BulletManager" type="Node" parent="."]
script = ExtResource("5_70iqa")

[node name="BulletPool" type="Node" parent="."]
script = ExtResource("6_ktoa3")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("9_mkkgn")
player_scene = ExtResource("7_s7fwu")

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("10_jtbw3")

[node name="VFXManager" type="Node" parent="."]
script = ExtResource("15_rxwbf")

[node name="CameraManager" type="Node" parent="."]
script = ExtResource("10_pw3kq")

[node name="CursorManager" type="Node" parent="."]
script = ExtResource("11_mfgc0")
